<resources>
    <string name="app_name">NexgoApp</string>
    <string name="action_settings">Settings</string>
    <string name="aid">设置Aid</string>
    <string name="capk">设置Capk</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="sale">消费</string>
    <string name="comfim">确认</string>
    <string name="cancel">取消</string>
    <string name="signin">签到</string>
    <string name="user_name">操作员:</string>
    <string name="user_password">密码:</string>
    <string name="trade_type_null">交易类型未知</string>
    <string name="tip_no_null">不可为空</string>
    <string name="trade_succeed">交易成功</string>
    <string name="trade_failed">交易失败</string>
    <string name="load_kek_succeed">下载主密钥成功</string>
    <string name="load_kek_failed">下载主密钥失败</string>
    <string name="location_succeed">初始化定位成功</string>
    <string name="location_failed">初始化定位失败</string>
    <string name="sale_plssignin">请先签到!</string>
    <string name="sign_succeed">签到成功</string>
    <string name="sign_failed">签到失败</string>
    <string name="sign_failed_wk">下载工作密钥失败</string>
    <string name="sale_succeed">消费成功</string>
    <string name="sale_failed">消费失败</string>
    <string name="unsale_succeed">撤销成功</string>
    <string name="unsale_failed">撤销失败</string>
    <string name="query_succeed">查询成功</string>
    <string name="query_failed">查询失败</string>
    <string name="refund_succeed">退货成功</string>
    <string name="refund_failed">退货失败</string>
    <string name="Preauth_succeed">预授权成功</string>
    <string name="Preauth_failed">预授权失败</string>
    <string name="Complete_succeed">预授权完成成功</string>
    <string name="Complete_failed">预授权完成失败</string>
    <string name="PreauthRevoke_succeed">预授权撤销成功</string>
    <string name="PreauthRevoke_failed">预授权撤销失败</string>
    <string name="PreauthedRevoke_succeed">预授权完成撤销成功</string>
    <string name="PreauthedRevoke_failed">预授权完成撤销失败</string>
    <string name="settle_succeed">结算成功</string>
    <string name="settle_failed">结算失败</string>
    <string name="settle_notrecord">无交易记录</string>
    <string name="settle_querry_trans">查询交易中</string>
    <string name="list_statistics_list">结算总计单</string>
    <string name="trans_date">交易日期</string>
    <string name="list_trans_type">类型/TYPE</string>
    <string name="list_trans_sum">笔数/SUM</string>
    <string name="list_trans_amt">金额/AMT</string>
    <string name="list_trans_indebit">借记/SALE(内卡)</string>
    <string name="list_trans_incredit">贷记/SALE(内卡)</string>
    <string name="list_trans_outdebit">借记/SALE(外卡)</string>
    <string name="list_trans_outcredit">贷记/SALE外卡)</string>
    <string name="list_trans_total">总计/TOTAL</string>
    <string name="amount">金额</string>
    <string name="swipe_all_card">请刷卡/插卡或挥卡</string>
    <string name="pls_insert_icc">请使用IC卡</string>
    <string name="err">出错了!</string>
    <string name="succ">成功</string>
    <string name="unit_cn">元</string>
    <string name="card_no">卡号</string>
    <string name="pay_confirm">请确认卡号正确？</string>
    <string name="pls_input_pin">请输入密码</string>
    <string name="pin_error">密码错误</string>
    <string name="lefe_time">剩余次数</string>
    <string name="cer_virify">证件校验</string>
    <string name="cer">证件</string>
    <string name="info">信息</string>
    <string name="print_printing">打印中...</string>
    <string name="print_plswait">请不要进行其它操作</string>
    <string name="print_plstearoff">请撕纸</string>
    <string name="print_lackpapper">打印机缺纸</string>
    <string name="print_lacktip">请装上纸后按确定重打</string>
    <string name="print_deviceerr">打印机故障</string>
    <string name="print_err">打印出错了!</string>
    <string name="print_othererr">其它错误</string>
    <string name="print_OK">确定</string>
    <string name="print_CANCEL">取消</string>
    <string name="err_connect_service">连接服务失败</string>
    <string name="succ_connect_service">连接服务成功</string>
    <string name="err_socket_timeout">连接/接收超时</string>
    <string name="err_socket_closed">服务器断开连接</string>
    <string name="err_socket_connect_fail">连接失败</string>
    <string name="commu_trade">交易进行中...</string>
    <string name="commu_send">正在发送...</string>
    <string name="commu_recv">正在接收...</string>
    <string name="commu_connect">正在连接中...</string>
    <string name="commu_recverr">接收超时</string>
    <string name="commu_err">通讯出错</string>
    <string name="exchangeBag_err">和华夏sdk报文交换失败</string>
    <string name="pls_input_syspin">请输入系统管理员密码</string>
    <string name="syspin">系统管理员密码</string>
    <string name="pls_input_securepin">请输入安全密码</string>
    <string name="securepin">安全密码</string>
    <string name="pls_input_managepin">请输入主管密码</string>
    <string name="managepin">主管密码</string>
    <string name="Comcontrol">通讯开关控制</string>
    <string name="pref_header_business">商户管理设置</string>
    <string name="pref_title_merchant_name_input">商户名称</string>
    <string name="pref_title_merchantno_input">商户号</string>
    <string name="pref_title_terminalno_input">终端号</string>
    <string name="pref_header_net">网络参数设置</string>
    <string name="pref_title_tpdu_input">TPDU</string>
    <string name="pref_title_ip_input">服务器地址</string>
    <string name="pref_title_port_input">服务器端口</string>
    <string name="pref_header_system">系统参数设置</string>
    <string name="pref_title_voucherno_input">流水号</string>
    <string name="pref_title_batchno_input">批次号</string>
    <string name="merchant_name_input">商户名称</string>
    <string name="application_name">应用名称</string>
    <string name="merchant_name_english">商户英文名</string>
    <string name="merchantno_input">商户号</string>
    <string name="terminalno_input">终端号</string>
    <string name="voucherno_input">流水号</string>
    <string name="batchno_input">批次号</string>
    <string name="PrivateNetway">专网通道</string>
    <string name="IsSupportTelnet">支持拨号</string>
    <string name="IsSupportSerial">支持串口</string>
    <string name="IsSupportGprs">支持以太网</string>
    <string name="IsSupportCDMA">支持CDMA</string>
    <string name="IsSupportEther">支持以太网</string>
    <string name="IsPredial">预拨号</string>
    <string name="TradeTimeout">交易超时时间</string>
    <string name="TelOutsideNO">交易重拔次数</string>
    <string name="TelCenterTradeNO1">中心交易号码 1</string>
    <string name="TelCenterTradeNO2">中心交易号码 2</string>
    <string name="TelCenterTradeNO3">中心交易号码 3</string>
    <string name="GprsInsertNO">接入号码</string>
    <string name="GprsAPN1Name">APN1名称</string>
    <string name="GprsHost1IPAdr">主机 1 IP 地址</string>
    <string name="GprsHost1Port">主机 1 端口</string>
    <string name="GprsHost2IPAdr">主机 2 IP 地址</string>
    <string name="GprsHost2Port">主机 2 端口</string>
    <string name="GprsIsUserSetting">用户名设置</string>
    <string name="pref_header_KeySetting">终端密钥管理</string>
    <string name="TerminalKeyIndex">终端秘钥索引</string>
    <string name="TAKNULL">终端秘钥索引空</string>
    <string name="IsTakEncry">磁道信息是否加密</string>
    <string name="KeyEncryControl">密钥加密控制</string>
    <string name="pref_header_possystem">POS设置</string>
    <string name="SecurePwd">安全密码</string>
    <string name="MaxRefundAmount">最大退货金额</string>
    <string name="MK">手输主秘钥</string>
    <string name="pref_header_TradeSetting">交易管理设置</string>
    <string name="MK_Algorithm">设置秘钥算法</string>
    <string name="DefaultTrade">默认交易设置</string>
    <string-array name="DefaultTrade_titles">
        <item>消费</item>
        <item>预授权</item>
    </string-array>
    <string-array name="DefaultTrade_values">
        <item>00</item>
        <item>01</item>
    </string-array>
    <string name="pref_header_PwdSetting">密码管理设置</string>
    <string name="SaleRevokeNeedCard">消费撤销刷卡</string>
    <string name="SaleRevokeNeedPwd">消费撤销输密</string>
    <string name="PreauthCompleteRevokeNeedCard">预授权完成撤销刷卡</string>
    <string name="PreauthCompleteRevokeNeedPwd">预授权完成撤销输密</string>
    <string name="PreauthRevokeNeedPwd">预授权撤销输密</string>
    <string name="PreauthCompleteNeedPwd">预授权完成（请求）输密</string>
    <string name="SettlePrintDetailSetting">结算打印明细设置</string>
    <string name="EnglishSetting">英文设置(热敏有效)</string>
    <string name="VoucherSetting">签购单设置（针打有效）</string>
    <string name="VoucherTitleSetting">签购单抬头设置</string>
    <string name="button10">结  算</string>
    <string name="pref_header_otherSetting">"其他功能设置"</string>
    <string name="clearItem">清除菜单</string>
    <string name="clear_voucher">"清除流水"</string>
    <string name="Isclear_voucher">"确定清除流水么？"</string>
    <string name="clear_Reveral">"清除冲正"</string>
    <string name="Isclear_Reveral">"确定清除冲正么？"</string>
    <string name="DB_AlreadyClean">"数据库已经清空"</string>
    <string name="Error_deleteDB">"删除数据库出错"</string>
    <string name="Success_deleteDB">"删除数据库成功"</string>
    <string name="Success_deleteReveral">"清除冲正成功"</string>
    <string name="dlitem">下载菜单</string>
    <string name="dlAID">"下载AID"</string>
    <string name="dlMK">"下载公钥"</string>
    <string name="printitem">"打印菜单"</string>
    <string name="printpaperNo">"打印联数"</string>
    <string name="PlsInput_printpaperNo">请输入打印联数</string>
    <string name="pref_header_ElecSignSetting">"电子签名设置"</string>
    <string name="FF8000">FF8000</string>
    <string name="FF8001">FF8001</string>
    <string name="FF8002">FF8002</string>
    <string name="FF8003">FF8003</string>
    <string name="FF8004">FF8004</string>
    <string name="FF8005">FF8005</string>
    <string name="FF8006">FF8006</string>
    <string name="FF8007">FF8007</string>
    <string name="FF8008">FF8008</string>
    <string name="FF8009">FF8009</string>
    <string name="FF8010">FF8010</string>
    <string name="FF8011">FF8011</string>
    <string name="FF8015">FF8015</string>
    <string name="FF8016">FF8016</string>
    <string name="FF8017">FF8017</string>
    <string name="FF8018">FF8018</string>
    <string name="FF803A">FF803A</string>
    <string name="FF803C">FF803C</string>
    <string name="FF8054">FF8054</string>
    <string name="FF8055">FF8055</string>
    <string name="FF8056">FF8056</string>
    <string name="FF8057">FF8057</string>
    <string name="FF8058">FF8058</string>
    <string name="FF8059">FF8059</string>
    <string name="FF805A">FF805A</string>
    <string name="FF8046">FF8046</string>
    <string name="FF9000">FF9000</string>
    <string name="FF9001">FF9001</string>
    <string name="FF9002">FF9002</string>
    <string name="FF9003">FF9003</string>
    <string name="FF9004">FF9004</string>
    <string name="FF9005">FF9005</string>
    <string name="FF9006">FF9006</string>
    <string name="FF9007">FF9007</string>
    <string name="FF9008">FF9008</string>
    <string name="FF900A">FF900A</string>
    <string name="FF900D">FF900D</string>
    <string name="FF900E">FF900E</string>
    <string name="FF900F">FF900F</string>
    <string name="FF9010">FF9010</string>
    <string name="FF9011">FF9011</string>
    <string name="FF9012">FF9012</string>
    <string name="FF901B">FF901B</string>
    <string name="FF901E">FF901E</string>
    <string name="FF901F">FF901F</string>
    <string name="FF9020">FF9020</string>
    <string name="FF9021">FF9021</string>
    <string name="FF9022">FF9022</string>
    <string name="FF9026">FF9026</string>
    <string name="FF9027">FF9027</string>
    <string name="FF9028">FF9028</string>
    <string name="FF9029">FF9029</string>
    <string name="FF902A">FF902A</string>
    <string name="FF902D">FF902D</string>
    <string name="FF9041">FF9041</string>
    <string name="FF9045">FF9045</string>
    <string name="PleaseInput_TermNo">请输入终端号</string>
    <string name="PleaseInput_MerchtNo">请输入商户号</string>
    <string name="PleaseInput_AppName">请输入应用名称</string>
    <string name="PleaseInput_MerchName">请输入商户名称</string>
    <string name="PleaseInput_MerchEngName">请输入商户英文名</string>
    <string name="please_input_manager_password">请输入主管密码</string>
    <string name="rmb">元</string>
    <string name="refund_amount">退货金额:</string>
    <string name="button_confirm">确认</string>
    <string name="pleaseinput_trade_cardvalidity">请输入交易卡有效期</string>
    <string name="cardnumvalidity_hint">注:请输入卡有效期(YYMM),如无有直接按确认</string>
</resources>