<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/net">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsSupportTelnet_bool"
        android:title="@string/IsSupportTelnet" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsSupportSerial_bool"
        android:title="@string/IsSupportSerial" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsSupportGprs_bool"
        android:title="@string/IsSupportGprs" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsSupportCDMA_bool"
        android:title="@string/IsSupportCDMA" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsSupportEther_bool"
        android:title="@string/IsSupportEther" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="IsPredial_bool"
        android:title="@string/IsPredial" />
    <EditTextPreference
        android:defaultValue="@string/Init_TPDU"
        android:inputType="number"
        android:digits="0123456789"
        android:key="TPDU_text"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_tpdu_input"/>
    <EditTextPreference
        android:defaultValue="@string/Init_IP"
        android:inputType="text"
        android:digits="0123456789."
        android:key="GprsHost1IPAdr_text"
        android:maxLines="1"
        android:maxLength="17"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsHost1IPAdr"/>
    <EditTextPreference
        android:inputType="text"
        android:digits="0123456789."
        android:key="GprsHost2IPAdr_text"
        android:maxLines="1"
        android:maxLength="17"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsHost2IPAdr"/>
    <EditTextPreference
        android:defaultValue="@string/Init_Port"
        android:inputType="number"
        android:digits="0123456789"
        android:key="GprsHost1Port_text"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsHost1Port"/>
    <EditTextPreference
        android:inputType="number"
        android:digits="0123456789"
        android:key="GprsHost2Port_text"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsHost2Port"/>
    <EditTextPreference
        android:inputType="text"
        android:key="GprsIsUserSetting_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsIsUserSetting"/>
    <EditTextPreference
        android:inputType="number"
        android:digits="0123456789"
        android:key="TelCenterTradeNO1_text"
        android:maxLines="1"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/TelCenterTradeNO1"/>
    <EditTextPreference
        android:inputType="number"
        android:digits="0123456789"
        android:key="TelCenterTradeNO2_text"
        android:maxLines="1"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/TelCenterTradeNO2"/>
    <EditTextPreference
        android:inputType="number"
        android:digits="0123456789"
        android:key="TelCenterTradeNO3_text"
        android:maxLines="1"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/TelCenterTradeNO3"/>
    <EditTextPreference
        android:inputType="number"
        android:key="GprsAPN1Name_text"
        android:maxLines="1"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/GprsAPN1Name"/>
    <EditTextPreference
        android:defaultValue="60"
        android:inputType="number"
        android:digits="0123456789"
        android:key="TradeTimeout_text"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/TradeTimeout"/>
    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:digits="0123456789"
        android:key="TradeRetryDialAmount_text"
        android:maxLines="1"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/TelOutsideNO"/>
</PreferenceScreen>
