<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F5EFF0"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_setting_hight"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/base_setting_marginLeft"
            android:text="@string/merchantno_input"
            android:textSize="@dimen/fontsize"
            />

        <EditText
            android:id="@+id/et_merchant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/base_setting_marginLeft"
            android:background="@null"
            android:hint="@string/PleaseInput_MerchtNo"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/fontsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#292425"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_setting_hight"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/merchant_name_input"
            android:textSize="@dimen/fontsize"
            />

        <EditText
            android:id="@+id/et_merchant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/PleaseInput_MerchName"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/fontsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#292425"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_setting_hight"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/merchant_name_english"
            android:textSize="@dimen/fontsize"
            />

        <EditText
            android:id="@+id/et_merchant_englishname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/PleaseInput_MerchEngName"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/fontsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#292425"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_setting_hight"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/terminalno_input"
            android:textSize="@dimen/fontsize"
            />

        <EditText
            android:id="@+id/et_terminal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/PleaseInput_TermNo"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/fontsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#292425"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_setting_hight"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/application_name"
            android:textSize="@dimen/fontsize"
            />

        <EditText
            android:id="@+id/et_application_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/PleaseInput_AppName"
            android:inputType="textNoSuggestions"
            android:textSize="@dimen/fontsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#292425"
        />

</LinearLayout>