<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refund_amount"
            android:textSize="20sp"
            android:textColor="#2B2D2C"
            />
        <TextView
            android:id="@+id/textview_refunddialog"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxx"
            android:textSize="20sp"
            android:textColor="#F04517"
            />
        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb"
            android:textSize="20sp"
            android:textColor="#F04517"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_confirm_refunddialog"
            android:background="#EC2E62"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/comfim"/>
        <Button
            android:id="@+id/bt_cancel_refunddialog"
            android:layout_marginStart="60dp"
            android:background="#2EEC5E"
            android:textColor="#ffffff"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>
